# ai2ais-core

./:  requirements.txt  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_ai_analysis.py  test_apis.py  test_claude_full.py  test_memory.py  test_memory_characters.py  test_peer_feedback.py  test_traits.py
.github/workflows/: python-test.yml  trigger-deploy.yml
app/: main.py
app/api/: websocket.py  websocket_od.py
app/config/: settings.py
app/core/ai/characters/: __init__.py  adaptive_traits.py  ai_response_analyzer.py  base.py  claude.py  gpt.py  grok.py  memory_enhanced_base.py  shared_adaptive_phrases.py
app/core/ai/clients/: claude_client.py  gpt_client.py  grok_client.py
app/core/ai/memory/: __init__.py  character_memory.py  embeddings.py  enhanced_character_memory.py  vector_store.py
app/core/content/: autonomous_topic_selector.py  topic_sources.py
app/core/database/: __init__.py  service.py
app/core/media/tts/: __init__.py  chatterbox_tts.py  google_tts.py  lip_sync.py  voice_profiles.py
app/core/sessions/: autonomous_manager.py
scripts/: init-db.sql  migrate_database.py  setup-database.sh  setup_qdrant.py
